--- a/CSS/ex003/style.css
+++ b/CSS/ex003/style.css
@@ -1,12 +1,23 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?família=Sriracha&display=swap');
+
+:root{
+
+    --font1: Verdana, Geneva, Tahoma, sans-serif; 
+    --font2: 'Sriracha', cursiva;
+    --font3:  'Oswald', sans-serif;
+}
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+ 
 }
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 header{
     background-color: black;
@@ -16,6 +27,9 @@ header{
 header>h1{
     padding-top: 50px;
     text-transform: uppercase;
+    font-family: var(--font2);
+
+    font-size: 5vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -33,6 +47,11 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
+}
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -42,11 +61,27 @@ section.normal{
 section.imagem{
     background-color: rgb(53, 50, 50);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.596);
+    background-size: cover;
+    background-attachment: fixed;
 }
 section.imagem > p{
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.255);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.507);
+    text-shadow: 1px 1px 0px black;
 }
+section#id1{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+  
+}
+section#id2{
+    background-image: url(imagens/background002.jpg);
+    background-position: center center;
+
+}
+
 
 
 
